<resources>
    <string name="app_name">FirebaseAuth</string>

<!--   Login -->
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
    <string name="sign_in_with_google">Sign in with Google"</string>
    <string name="sign_in_with_email_link">Sign in with Email Link"</string>

    <string name="sign_out">Sign-out</string>
    <string name="sign_in">Sign-in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign-up</string>

    <string name="check_your_email">Check your email</string>
    <string name="reset_password_title">Enter your email to receive instructions to reset your password</string>

    <string name="vertical_divider">|</string>

    <string name="profile_image">Profile Image</string>


<!--    Home-->
    <string name="welcome">Welcome</string>
    <string name="placeholder_name">Name placeholder</string>
    <string name="placeholder_email">Email placeholder</string>
    <string name="view_data">Sign in to view data.</string>

    <string name="delete_acc">Delete Acc</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_warning">Deleting account is permanent. Are you sure you want to delete your account?</string>
    <string name="text_display_general">Click on the user icon to see auth options</string>

<!--    Dialog-->
    <string name="dismiss">Dismiss</string>
    <string name="confirm_delete">Yes, Delete</string>


<!--    Error-->

    <string name="error_general">Error occurred. Please try again.</string>


</resources>